--- a/templates/default/puma.rb.erb
+++ b/templates/default/puma.rb.erb
@@ -62,7 +62,7 @@ stdout_redirect "#{application_path}/log/puma.stdout.log", "#{application_path}/
 #
 # The default is “tcp://0.0.0.0:9292”.
 #
-bind 'tcp://0.0.0.0:9292'
+bind 'tcp://0.0.0.0:<%= node['gitlab']['puma_tcp_port'] %>'
 #bind "unix://#{application_path}/tmp/sockets/gitlab.socket"
 
 # Instead of “bind 'ssl://127.0.0.1:9292?key=path_to_key&cert=path_to_cert'” you
