--- a/templates/default/config-shell.yml.erb
+++ b/templates/default/config-shell.yml.erb
@@ -2,12 +2,12 @@
 user: <%= node['gitlab']['git_user'] %>
 
 # Url to gitlab instance. Used for api calls. Should be ends with slash.
-gitlab_url: "<%= node['gitlab']['http_proxy']['host_name'] %>"
+gitlab_url: "<%= @https %>://<%= node['gitlab']['http_proxy']['host_name'] %>/"
 
 http_settings:
 #  user: someone
 #  password: somepass
-  self_signed_cert: false
+  self_signed_cert: true
 
 # Repositories path
 # REPOS_PATH MUST NOT BE A SYMLINK!!!
