--- a/templates/default/puma.rb.erb
+++ b/templates/default/puma.rb.erb
@@ -17,56 +17,56 @@ directory application_path
 
 # Set the environment in which the rack's app will run.
 #
-# The default is “development”.
+# The default is "development".
 #
 environment 'production'
 
 # Daemonize the server into the background. Highly suggest that
-# this be combined with “pidfile” and “stdout_redirect”.
+# this be combined with "pidfile" and "stdout_redirect".
 #
-# The default is “false”.
+# The default is "false".
 #
 daemonize true
 
-# Store the pid of the server in the file at “path”.
+# Store the pid of the server in the file at "path".
 #
 pidfile "#{application_path}/tmp/pids/puma.pid"
 
-# Use “path” as the file to store the server info state. This is
-# used by “pumactl” to query and control the server.
+# Use "path" as the file to store the server info state. This is
+# used by "pumactl" to query and control the server.
 #
 state_path "#{application_path}/tmp/pids/puma.state"
 
 # Redirect STDOUT and STDERR to files specified. The 3rd parameter
-# (“append”) specifies whether the output is appended, the default is
-# “false”.
+# ("append") specifies whether the output is appended, the default is
+# "false".
 #
 stdout_redirect "#{application_path}/log/puma.stdout.log", "#{application_path}/log/puma.stderr.log"
 # stdout_redirect '/u/apps/lolcat/log/stdout', '/u/apps/lolcat/log/stderr', true
 
 # Disable request logging.
 #
-# The default is “false”.
+# The default is "false".
 #
 # quiet
 
-# Configure “min” to be the minimum number of threads to use to answer
-# requests and “max” the maximum.
+# Configure "min" to be the minimum number of threads to use to answer
+# requests and "max" the maximum.
 #
-# The default is “0, 16”.
+# The default is "0, 16".
 #
 # threads 0, 16
 
-# Bind the server to “url”. “tcp://”, “unix://” and “ssl://” are the only
+# Bind the server to "url". "tcp://", "unix://" and "ssl://" are the only
 # accepted protocols.
 #
-# The default is “tcp://0.0.0.0:9292”.
+# The default is "tcp://0.0.0.0:9292".
 #
 bind 'tcp://0.0.0.0:<%= node['gitlab']['puma_tcp_port'] %>'
 #bind "unix://#{application_path}/tmp/sockets/gitlab.socket"
 
-# Instead of “bind 'ssl://127.0.0.1:9292?key=path_to_key&cert=path_to_cert'” you
-# can also use the “ssl_bind” option.
+# Instead of "bind 'ssl://127.0.0.1:9292?key=path_to_key&cert=path_to_cert'" you
+# can also use the "ssl_bind" option.
 #
 # ssl_bind '127.0.0.1', '9292', { key: path_to_key, cert: path_to_cert }
 
@@ -89,7 +89,7 @@ bind 'tcp://0.0.0.0:<%= node['gitlab']['puma_tcp_port'] %>'
 
 # How many worker processes to run.
 #
-# The default is “0”.
+# The default is "0".
 #
 # workers 2
 
@@ -104,7 +104,7 @@ bind 'tcp://0.0.0.0:<%= node['gitlab']['puma_tcp_port'] %>'
 
 # === Puma control rack application ===
 
-# Start the puma control rack application on “url”. This application can
+# Start the puma control rack application on "url". This application can
 # be communicated with to control the main server. Additionally, you can
 # provide an authentication token, so all requests to the control server
 # will need to include that token as a query parameter. This allows for
