--- a/templates/default/puma.rb.erb
+++ b/templates/default/puma.rb.erb
@@ -91,7 +91,7 @@ bind 'tcp://0.0.0.0:<%= node['gitlab']['puma_tcp_port'] %>'
 #
 # The default is "0".
 #
-# workers 2
+workers 4
 
 # Code to run when a worker boots to setup the process before booting
 # the app.
